--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.46",
     "expo-font": "~13.0.4",
+    "expo-image": "^2.0.7",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
@@ -25,6 +26,7 @@
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-native": "0.76.9",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
